--- a/app/src/main/res/layout/fragment_today_task.xml
+++ b/app/src/main/res/layout/fragment_today_task.xml
@@ -4,6 +4,7 @@
     android:id="@+id/todayTaskFrm_coordinatorLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/backgroundColor"
     android:paddingTop="8dp">
     <android.support.v7.widget.RecyclerView
         android:id="@+id/todayTaskFrm_recyclerView"
