--- a/app/src/main/res/layout/listview_role_item.xml
+++ b/app/src/main/res/layout/listview_role_item.xml
@@ -5,7 +5,7 @@
     android:layout_height="72dp"
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
-    android:background="?android:attr/selectableItemBackground"
+    android:background="@drawable/selectable_item_background"
     android:gravity="center"
     android:orientation="vertical">
 
