--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -30,4 +30,6 @@
     <color name="today_task_ignore">#EEEEEE</color>
     <color name="today_task_delay">#FCDFDB</color>
 
+    <color name="white">#FFFFFF</color>
+
 </resources>
