--- a/app/src/main/res/layout/activity_plan_create.xml
+++ b/app/src/main/res/layout/activity_plan_create.xml
@@ -15,7 +15,9 @@
             android:id="@+id/collapsing_toolbar_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            app:contentScrim="@color/primary"
             app:expandedTitleMarginStart="48dp"
+            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
             <LinearLayout
@@ -26,7 +28,7 @@
                 app:layout_collapseMode="parallax"
                 app:layout_collapseParallaxMultiplier="0.7"
                 android:orientation="vertical"
-                android:paddingTop="48dp">
+                android:paddingTop="44dp">
                 <LinearLayout
                     android:id="@+id/pcAct_title_layout"
                     android:layout_width="match_parent"
@@ -178,10 +180,8 @@
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/activity_toolBar"
-                android:layout_height="wrap_content"
+                android:layout_height="?attr/actionBarSize"
                 android:layout_width="match_parent"
-                android:background="?attr/colorPrimary"
-                android:minHeight="?attr/actionBarSize"
                 app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                 app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                 app:layout_collapseMode="pin" />
