add bottom navigation

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -2,6 +2,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
+    <include layout="@layout/toolbar_common"/>
 
     <com.chris.utopia.common.view.SlidingTabLayout
         android:id="@+id/homeFrm_slidingTabLayout"
