--- a/app/src/main/res/layout/fragment_other.xml
+++ b/app/src/main/res/layout/fragment_other.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center"
     android:theme="@style/ThemeOverlay.AppCompat.Light">
+    <include layout="@layout/toolbar_common"/>
     <TextView
         android:id="@+id/id_tv_content"
         android:layout_width="wrap_content"
@@ -11,4 +12,4 @@
         android:layout_centerInParent="true"
         android:text="Other"
         android:textSize="30sp"/>
-</RelativeLayout>
+</LinearLayout>
