--- a/app/src/main/res/layout/fragment_role.xml
+++ b/app/src/main/res/layout/fragment_role.xml
@@ -1,23 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/roleFrm_coordinatorLayout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingTop="8dp">
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/roleFrm_recyclerView"
+    android:layout_height="match_parent">
+    <include layout="@layout/toolbar_common" />
+    <android.support.design.widget.CoordinatorLayout
+        android:layout_below="@+id/activity_toolBar"
+        android:id="@+id/roleFrm_coordinatorLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/roleFrm_addFad"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|right"
-        android:layout_margin="16dp"
-        android:src="@drawable/ic_add"
-        app:backgroundTint="@color/accent"
-        app:layout_anchor="@id/roleFrm_recyclerView"
-        app:layout_anchorGravity="bottom|right|end"
-        app:layout_behavior="com.chris.utopia.common.util.ScrollAwareFABBehavior"/>
-</android.support.design.widget.CoordinatorLayout>
+        android:layout_height="match_parent"
+        android:paddingTop="8dp">
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/roleFrm_recyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/roleFrm_addFad"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|right"
+            android:layout_margin="16dp"
+            android:src="@drawable/ic_add"
+            app:backgroundTint="@color/accent"
+            app:layout_anchor="@id/roleFrm_recyclerView"
+            app:layout_anchorGravity="bottom|right|end"
+            app:layout_behavior="com.chris.utopia.common.util.ScrollAwareFABBehavior"/>
+
+    </android.support.design.widget.CoordinatorLayout>
+</RelativeLayout>
