--- a/app/src/main/res/layout/activity_plan_create.xml
+++ b/app/src/main/res/layout/activity_plan_create.xml
@@ -2,7 +2,6 @@
 <android.support.design.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/pcAct_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -192,6 +191,7 @@
         android:id="@+id/pcAct_thing_rv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/white"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         android:scrollbars="none"/>
     <android.support.design.widget.FloatingActionButton
