--- a/app/src/main/res/layout/fragment_habit.xml
+++ b/app/src/main/res/layout/fragment_habit.xml
@@ -4,10 +4,10 @@
     android:id="@+id/habitFrm_coordinatorLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/backgroundColor"
     android:paddingTop="8dp">
     <android.support.v7.widget.RecyclerView
         android:id="@+id/habitFrm_recyclerView"
+        android:background="@color/white"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
     <android.support.design.widget.FloatingActionButton
