--- a/app/src/main/res/layout/fragment_role.xml
+++ b/app/src/main/res/layout/fragment_role.xml
@@ -13,6 +13,7 @@
         android:paddingTop="8dp">
         <android.support.v7.widget.RecyclerView
             android:id="@+id/roleFrm_recyclerView"
+            android:background="@color/white"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
         <android.support.design.widget.FloatingActionButton
