--- a/app/src/main/res/layout/listview_plan_create.xml
+++ b/app/src/main/res/layout/listview_plan_create.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="72dp"
     android:orientation="horizontal"
-    android:background="@drawable/selectable_item_background"
+    android:background="?android:attr/selectableItemBackground"
     android:paddingLeft="16dp"
     android:paddingRight="16dp">
     <com.chris.utopia.common.view.DisplayLeakConnectorView
