--- a/app/src/main/res/layout/listview_role_item.xml
+++ b/app/src/main/res/layout/listview_role_item.xml
@@ -5,9 +5,9 @@
     android:layout_height="72dp"
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
-    android:background="@drawable/selectable_item_background"
     android:gravity="center"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="?android:attr/selectableItemBackground">
 
     <TextView
         android:id="@+id/roleLv_name_tv"
