--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,7 +10,7 @@
         <item name="colorPrimaryDark">@color/primary_dark</item>
         <item name="colorAccent">@color/accent</item>
         <item name="android:windowBackground">@color/backgroundColor</item>
-
+        <!--<item name="android:windowBackground">@color/backgroundColor</item>-->
         <item name="android:windowTranslucentStatus">true</item>
     </style>
 
