--- a/app/src/main/res/layout/activity_label.xml
+++ b/app/src/main/res/layout/activity_label.xml
@@ -3,30 +3,31 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <include layout="@layout/toolbar_common"/>
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true">
+    <include layout="@layout/toolbar_common" />
     <android.support.design.widget.CoordinatorLayout
-        android:id="@+id/stFrm_coordinatorLayout"
         android:layout_below="@+id/activity_toolBar"
+        android:id="@+id/labelAct_coordinatorLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
+        android:layout_height="match_parent"
+        android:paddingTop="8dp">
         <android.support.v7.widget.RecyclerView
-            android:id="@+id/ideaFrm_recyclerView"
+            android:id="@+id/labelAct_recyclerView"
+            android:background="@color/white"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:paddingTop="8dp"
-            android:paddingLeft="8dp"/>
+            android:layout_height="match_parent"/>
         <android.support.design.widget.FloatingActionButton
-            android:id="@+id/ideaFrm_addFad"
+            android:id="@+id/labelAct_addFad"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|right"
             android:layout_margin="16dp"
             android:src="@drawable/ic_add"
             app:backgroundTint="@color/accent"
-            app:layout_anchor="@id/ideaFrm_recyclerView"
+            app:layout_anchor="@id/labelAct_recyclerView"
             app:layout_anchorGravity="bottom|right|end"
             app:layout_behavior="com.chris.utopia.common.util.ScrollAwareFABBehavior"/>
+
     </android.support.design.widget.CoordinatorLayout>
 </RelativeLayout>
