--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -43,7 +43,7 @@ android:layout_height="match_parent">
     <android.support.v7.widget.RecyclerView
         android:id="@+id/profileAct_menu_rv"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:background="@color/white"/>
 </LinearLayout>
 </android.support.design.widget.CoordinatorLayout>
