--- a/app/src/main/res/layout/listview_profile_item.xml
+++ b/app/src/main/res/layout/listview_profile_item.xml
@@ -10,6 +10,7 @@
         android:id="@+id/profileLv_image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:tint="@color/backgroundColorPress"
         android:src="@drawable/ic_idea"
         android:layout_centerVertical="true"/>
 
