--- a/app/src/main/res/layout/listview_menu_item.xml
+++ b/app/src/main/res/layout/listview_menu_item.xml
@@ -2,11 +2,12 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/menuList_text"
     android:layout_width="match_parent"
-    android:layout_height="48dp"
+    android:layout_height="36dp"
     android:text="hello"
     android:textAppearance="?android:attr/textAppearanceListItemSmall"
     android:gravity="center_vertical"
     android:paddingStart="?android:attr/listPreferredItemPaddingStart"
     android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
     android:minHeight="?android:attr/listPreferredItemHeightSmall"
+    android:textSize="12sp"
     android:textColor="@color/primary_text_dark_color"/>
