--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -46,5 +46,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/white"/>
+
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/profileAct_menu_rv2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:background="@color/white"/>
 </LinearLayout>
 </android.support.design.widget.CoordinatorLayout>
